--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>NG Scrape</title>
 </head>
 <body>
+    Hello World!
     <div id="articles"></div>
     <div id="notes"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
