successfull scraping of articles and placed into myCard elements

--- a/public/index.html
+++ b/public/index.html
@@ -14,27 +14,27 @@
 <body>Hello World!
     <div id="articles">
 
-        <div class="MyCard">
+        <!-- <div class="MyCard">
             <div class="MyCard-ImageDiv">
                     <img class="MyCard-Image" src="images/testImage.jpeg" alt="WATERMELONE!">
                 <h4 class="MyCard-Title">THIS IS A LONG TITLE THAT IS TWICE AS LONG AS THE LAST ONE</h4>
+                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">+</i></a>
             </div>
-            <div class="MyCard-Content">
-                content
+            <div class="MyCard-ContentDiv">
+                <p>
+                    contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent
+                </p>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
     <div id="notes"></div>
 
-
-
+    <!-- Jquery CDN Link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Materialize JS Link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
- 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <!-- Custom JS Link -->
     <script src="app.js"></script>
 </body>
