finished adding Notes, currently creating a new Note Uses HardCoded values, hence all notes are identical Still cant figure out why  for when a card is clicked does not work, its the key to dynamic notes need to refresh to show added note, scrape works

--- a/public/index.html
+++ b/public/index.html
@@ -11,25 +11,20 @@
 
     <title>NG Scrape</title>
 </head>
-<body>Hello World!
+<body>
+    
     <div id="articles">
-
-        <!-- <div class="MyCard">
-            <div class="MyCard-ImageDiv">
-                    <img class="MyCard-Image" src="images/testImage.jpeg" alt="WATERMELONE!">
-                <h4 class="MyCard-Title">THIS IS A LONG TITLE THAT IS TWICE AS LONG AS THE LAST ONE</h4>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">+</i></a>
-            </div>
-            <div class="MyCard-ContentDiv">
-                <p>
-                    contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent
-                </p>
-            </div>
-        </div> -->
-
     </div>
 
-    <div id="notes"></div>
+    <h3 id="selectedArticle" data-id="">Selected Article</h3>
+
+    <div >
+        <input type="text" id="newNote" minlength="10" maxlength="100">
+        <button id="createNote">add Note</button>
+    </div>
+
+    <div id="notes">
+    </div>
 
     <!-- Jquery CDN Link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
